--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- css links -->
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/media.css" />
-    <title>GEFEST_layout</title>
+    <title>gefest :0</title>
   </head>
 
   <body>
