--- a/index.html
+++ b/index.html
@@ -94,24 +94,26 @@
                         <img src="images/metal_pipe_2.svg" alt="" class="tab_img">
                         <span> Изделия на заказ </span>
                     </label>
-                    <ul>
+                    <ul class="tab_list">
                         <li class="tab-content tab-content-first typography">
                             <div class="product_body">
                                 <img src="images/metal_wrap2.jpg" alt="" width="600px">
-                                <h2>Штрипс, лента оцинкованная</h2>
-                            </div>
+                                <!--  
+                               <h2>Штрипс, лента оцинкованная</h2>
+                                <ul>
+                                    <li>1</li>
+                                    <li>2</li>
+                                    <li>3</li>
+                                </ul>
+                            </div> 
+                               -->
                         </li>
                         <li class="tab-content tab-content-2 typography">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam dolores autem eveniet veritatis ipsum vero deleniti fugit ab mollitia aut eum quisquam provident tempora exercitationem sunt distinctio consectetur eligendi, eos neque nobis laborum! Neque aliquam provident ullam corporis veniam fuga enim accusamus iste quibusdam delectus pariatur non debitis adipisci quidem tempore, maiores consequuntur in voluptate laborum commodi optio reiciendis. Adipisci vitae, illo praesentium quis neque odit velit blanditiis tempora quo assumenda itaque porro dignissimos perferendis, aliquid, repellendus ipsam rerum suscipit excepturi. Aperiam at ipsa ad esse? Sapiente eum molestias excepturi sint deleniti voluptates totam aliquam cupiditate. Sint explicabo accusantium quo?</p>
                         </li>
                         <li class="tab-content tab-content-3 typography">
-                            <h1>Lorem, ipsum dolor.</h1>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam dolores autem eveniet veritatis ipsum vero deleniti fugit ab mollitia aut eum quisquam provident tempora exercitationem sunt distinctio consectetur eligendi, eos neque nobis laborum! Neque aliquam provident ullam corporis veniam fuga enim accusamus iste quibusdam delectus pariatur non debitis adipisci quidem tempore, maiores consequuntur in voluptate laborum commodi optio reiciendis. Adipisci vitae, illo praesentium quis neque odit velit blanditiis tempora quo assumenda itaque porro dignissimos perferendis, aliquid, repellendus ipsam rerum suscipit excepturi. Aperiam at ipsa ad esse? Sapiente eum molestias excepturi sint deleniti voluptates totam aliquam cupiditate. Sint explicabo accusantium quo?</p>
                         </li>
                         <li class="tab-content tab-content-last typography">
                             <div class="typography">
-                                <h1>Lorem, ipsum dolor.</h1>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam dolores autem eveniet veritatis ipsum vero deleniti fugit ab mollitia aut eum quisquam provident tempora exercitationem sunt distinctio consectetur eligendi, eos neque nobis laborum! Neque aliquam provident ullam corporis veniam fuga enim accusamus iste quibusdam delectus pariatur non debitis adipisci quidem tempore, maiores consequuntur in voluptate laborum commodi optio reiciendis. Adipisci vitae, illo praesentium quis neque odit velit blanditiis tempora quo assumenda itaque porro dignissimos perferendis, aliquid, repellendus ipsam rerum suscipit excepturi. Aperiam at ipsa ad esse? Sapiente eum molestias excepturi sint deleniti voluptates totam aliquam cupiditate. Sint explicabo accusantium quo?</p>
                             </div>
                         </li>
                     </ul>
