--- a/index.html
+++ b/index.html
@@ -95,23 +95,134 @@
                         <span> Изделия на заказ </span>
                     </label>
                     <ul class="tab_list">
+                        <!-- =CONTENT-1= -->
                         <li class="tab-content tab-content-first typography">
                             <div class="product_body">
                                 <img src="images/metal_wrap2.jpg" alt="" width="600px">
-                                <h2>Штрипс, лента оцинкованная</h2>
-                                <ul>
-                                    <li>1</li>
-                                    <li>2</li>
-                                    <li>3</li>
-                                </ul>
+                                <div class="border-enclosure"></div>
+                                <div class="product_body content">
+                                    <h2>Штрипс, лента оцинкованная</h2>
+                                    <ul>
+                                        <li>Оцинкованный штрипс </li>
+                                        <li> Оцинкованная стальная лента </span></li>
+                                        <li> Оцинкованная полоса Г/К </li>
+                                    </ul>
+                                    <div class="info-button">
+                                        <a href="#">
+                                            <button>Узнать стоимость</button>
+                                        </a>
+                                    </div>
+                                </div>
                             </div>
                         </li>
+                        <!-- =CONTENT-2= -->
                         <li class="tab-content tab-content-2 typography">
+                            <div class="product_body">
+                                <div class="product_body">
+                                    <img src="images/metal_wrap2.jpg" alt="" width="600px">
+                                    <div class="border-enclosure"></div>
+                                    <div class="product_body content">
+                                        <h2>Штрипс, оцинкованная</h2>
+                                        <ul>
+                                            <li>Оцинкованный штрипс </li>
+                                            <li> Оцинкованная стальная лента </span></li>
+                                            <li> Оцинкованная полоса Г/К </li>
+                                        </ul>
+                                        <div class="info-button">
+                                            <a href="#">
+                                                <button>Узнать стоимость</button>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </li>
+                        <!-- =CONTENT-3= -->
                         <li class="tab-content tab-content-3 typography">
+                            <div class="product_body">
+                                <div class="product_body">
+                                    <img src="images/metal_wrap2.jpg" alt="" width="600px">
+                                    <div class="border-enclosure"></div>
+                                    <div class="product_body content">
+                                        <h2>Штрипс, лента оцинкованная</h2>
+                                        <ul>
+                                            <li>Оцинкованный штрипс </li>
+                                            <li> Оцинкованная стальная лента </span></li>
+                                            <li> Оцинкованная полоса Г/К </li>
+                                        </ul>
+                                        <div class="info-button">
+                                            <a href="#">
+                                                <button>Узнать стоимость</button>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </li>
+                        <!-- =CONTENT-4= -->
+                        <li class="tab-content tab-content-4 typography">
+                            <div class="product_body">
+                                <div class="product_body">
+                                    <img src="images/metal_wrap2.jpg" alt="" width="600px">
+                                    <div class="border-enclosure"></div>
+                                    <div class="product_body content">
+                                        <h2>Штрипс, лента оцинкованная</h2>
+                                        <ul>
+                                            <li>Оцинкованный штрипс </li>
+                                            <li> Оцинкованная стальная лента </span></li>
+                                            <li> Оцинкованная полоса Г/К </li>
+                                        </ul>
+                                        <div class="info-button">
+                                            <a href="#">
+                                                <button>Узнать стоимость</button>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <!-- =CONTENT-5= -->
+                        <li class="tab-content tab-content-5 typography">
+                            <div class="product_body">
+                                <div class="product_body">
+                                    <img src="images/metal_wrap2.jpg" alt="" width="600px">
+                                    <div class="border-enclosure"></div>
+                                    <div class="product_body content">
+                                        <h2>Штрипс, лента оцинкованная</h2>
+                                        <ul>
+                                            <li>Оцинкованный штрипс </li>
+                                            <li> Оцинкованная стальная лента </span></li>
+                                            <li> Оцинкованная полоса Г/К </li>
+                                        </ul>
+                                        <div class="info-button">
+                                            <a href="#">
+                                                <button>Узнать стоимость</button>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <!-- =CONTENT-6= -->
                         <li class="tab-content tab-content-last typography">
-                            <div class="typography">
+                            <div class="product_body">
+                                <div class="product_body">
+                                    <img src="images/metal_wrap2.jpg" alt="" width="600px">
+                                    <div class="border-enclosure"></div>
+                                    <div class="product_body content">
+                                        <h2>Штрипс, лента оцинкованная</h2>
+                                        <ul>
+                                            <li>Оцинкованный штрипс </li>
+                                            <li> Оцинкованная стальная лента </span></li>
+                                            <li> Оцинкованная полоса Г/К </li>
+                                        </ul>
+                                        <div class="info-button">
+                                            <a href="#">
+                                                <button>Узнать стоимость</button>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </li>
                     </ul>
