product_block-complete

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <!-- =CONTENT-1= -->
                         <li class="tab-content tab-content-first typography">
                             <div class="product_body">
-                                <img src="images/metal_wrap2.jpg" alt="" width="600px">
+                                <img src="images/metal_wrap2.jpg" alt="" width="600px" height="600px">
                                 <div class="border-enclosure"></div>
                                 <div class="product_body content">
                                     <h2>Штрипс, лента оцинкованная</h2>
@@ -107,7 +107,7 @@
                                         <li> Оцинкованная стальная лента </span></li>
                                         <li> Оцинкованная полоса Г/К </li>
                                     </ul>
-                                    <div class="info-button">
+                                    <div class="info-button first">
                                         <a href="#">
                                             <button>Узнать стоимость</button>
                                         </a>
@@ -119,16 +119,15 @@
                         <li class="tab-content tab-content-2 typography">
                             <div class="product_body">
                                 <div class="product_body">
-                                    <img src="images/metal_wrap2.jpg" alt="" width="600px">
+                                    <img src="images/grids.png" alt="" width="600px" height="600px">
                                     <div class="border-enclosure"></div>
-                                    <div class="product_body content">
-                                        <h2>Штрипс, оцинкованная</h2>
+                                    <div class="content">
+                                        <h2>Сетка</h2>
                                         <ul>
-                                            <li>Оцинкованный штрипс </li>
-                                            <li> Оцинкованная стальная лента </span></li>
-                                            <li> Оцинкованная полоса Г/К </li>
+                                            <li>Сетка сварная </li>
+                                            <li> Сетка ПВЛ </li>
                                         </ul>
-                                        <div class="info-button">
+                                        <div class="info-button second">
                                             <a href="#">
                                                 <button>Узнать стоимость</button>
                                             </a>
@@ -141,16 +140,17 @@
                         <li class="tab-content tab-content-3 typography">
                             <div class="product_body">
                                 <div class="product_body">
-                                    <img src="images/metal_wrap2.jpg" alt="" width="600px">
+                                    <img src="images/metal_pieces_2.webp" alt="" width="600px" height="600px">
                                     <div class="border-enclosure"></div>
-                                    <div class="product_body content">
-                                        <h2>Штрипс, лента оцинкованная</h2>
+                                    <div class="content">
+                                        <h2>Профиль оцинкованный</h2>
                                         <ul>
-                                            <li>Оцинкованный штрипс </li>
-                                            <li> Оцинкованная стальная лента </span></li>
-                                            <li> Оцинкованная полоса Г/К </li>
+                                            <li> Профиль ГКЛ</li>
+                                            <li> Профиль фасадный</li>
+                                            <li> Профиль армирующий </li>
+                                            <li> Комплектующие </li>
                                         </ul>
-                                        <div class="info-button">
+                                        <div class="info-button third">
                                             <a href="#">
                                                 <button>Узнать стоимость</button>
                                             </a>
@@ -159,20 +159,31 @@
                                 </div>
                             </div>
                         </li>
-                        <!-- =CONTENT-4= -->
+                        <!--=CONTENT-4=-->
                         <li class="tab-content tab-content-4 typography">
                             <div class="product_body">
                                 <div class="product_body">
-                                    <img src="images/metal_wrap2.jpg" alt="" width="600px">
+                                    <img src="images/metal_roof_2.webp" alt="" width="600px" height="600px">
                                     <div class="border-enclosure"></div>
-                                    <div class="product_body content">
-                                        <h2>Штрипс, лента оцинкованная</h2>
-                                        <ul>
-                                            <li>Оцинкованный штрипс </li>
-                                            <li> Оцинкованная стальная лента </span></li>
-                                            <li> Оцинкованная полоса Г/К </li>
-                                        </ul>
-                                        <div class="info-button">
+                                    <div class="content">
+                                        <h2>Профнастил</h2>
+                                        <div class="content_list_position">
+                                            <ul>
+                                                <li>Профнастил С8</li>
+                                                <li> Профнастил Н57</li>
+                                                <li> Профнастил Н60 </li>
+                                                <li> Профнастил Н75</li>
+                                                <li>Профнастил НС35</li>
+                                            </ul>
+                                            <ul>
+                                                <li>Профнастил С8</li>
+                                                <li> Профнастил Н57</li>
+                                                <li> Профнастил Н60 </li>
+                                                <li> Профнастил Н75</li>
+                                                <li>Профнастил НС35</li>
+                                            </ul>
+                                        </div>
+                                        <div class="info-button fourth">
                                             <a href="#">
                                                 <button>Узнать стоимость</button>
                                             </a>
@@ -184,21 +195,56 @@
                         <!-- =CONTENT-5= -->
                         <li class="tab-content tab-content-5 typography">
                             <div class="product_body">
-                                <div class="product_body">
-                                    <img src="images/metal_wrap2.jpg" alt="" width="600px">
-                                    <div class="border-enclosure"></div>
-                                    <div class="product_body content">
-                                        <h2>Штрипс, лента оцинкованная</h2>
-                                        <ul>
-                                            <li>Оцинкованный штрипс </li>
-                                            <li> Оцинкованная стальная лента </span></li>
-                                            <li> Оцинкованная полоса Г/К </li>
-                                        </ul>
-                                        <div class="info-button">
-                                            <a href="#">
-                                                <button>Узнать стоимость</button>
-                                            </a>
+                                <img src="images/metal_pipes.jpg" alt="" width="600px" height="600px">
+                                <div class="border-enclosure"></div>
+                                <div class="list">
+                                    <div class="list_position">
+                                        <div>
+                                            <h2>Листовой прокат</h2>
+                                            <ul>
+                                                <li> Лист Х/К </li>
+                                                <li> Лист Г/К</li>
+                                                <li> Лист НЛГ </li>
+                                                <li> Лист ОЦ</li>
+                                                <li> Лист рифл</li>
+                                                <li> Лист ПВЛ</li>
+                                                <li> Лист полимер</li>
+                                            </ul>
                                         </div>
+                                        <div>
+                                            <h2>Сортовой прокат</h2>
+                                            <ul>
+                                                <li>Арматура</li>
+                                                <li> Катанка</li>
+                                                <li> Круг </li>
+                                                <li> Проволока</li>
+                                                <li> Квадрат</li>
+                                                <li> Шестигранник</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="list_position">
+                                        <div>
+                                            <h2>Трубный прокат</h2>
+                                            <ul>
+                                                <li> Труба профильная </li>
+                                                <li> Труба Б/Ш</li>
+                                                <li> Труба Э/С </li>
+                                            </ul>
+                                        </div>
+                                        <div>
+                                            <h2>Фасонный прокат</h2>
+                                            <ul>
+                                                <li>Балка</li>
+                                                <li> Уголок</li>
+                                                <li> Швеллер </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="info-button fifth">
+                                        <a href="#">
+                                            <button>Узнать стоимость</button>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -206,21 +252,19 @@
                         <!-- =CONTENT-6= -->
                         <li class="tab-content tab-content-last typography">
                             <div class="product_body">
-                                <div class="product_body">
-                                    <img src="images/metal_wrap2.jpg" alt="" width="600px">
-                                    <div class="border-enclosure"></div>
-                                    <div class="product_body content">
-                                        <h2>Штрипс, лента оцинкованная</h2>
-                                        <ul>
-                                            <li>Оцинкованный штрипс </li>
-                                            <li> Оцинкованная стальная лента </span></li>
-                                            <li> Оцинкованная полоса Г/К </li>
-                                        </ul>
-                                        <div class="info-button">
-                                            <a href="#">
-                                                <button>Узнать стоимость</button>
-                                            </a>
-                                        </div>
+                                <img src="images/metal_peaces.jpg" alt="" width="600px" height="600px">
+                                <div class="border-enclosure"></div>
+                                <div class="content">
+                                    <h2>Изделия на заказ</h2>
+                                    <ul>
+                                        <li>по любым вашим размерам</li>
+                                        <li> из интересующих марок стали</li>
+                                        <li> в соотвествии с ТУ и ГОСТ </li>
+                                    </ul>
+                                    <div class="info-button sixth">
+                                        <a href="#">
+                                            <button>Узнать стоимость</button>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -230,7 +274,7 @@
                 <!--/ tabs -->
             </div>
         </div>
-        </div>
+        a
     </main>
 </body>
 
