--- a/index.html
+++ b/index.html
@@ -46,10 +46,12 @@
                     Склады и филиалы производства в 26 крупных городах по всей
                     территории РФ
                 </p>
-                <button>
-                    Получить прайс <br />
-                    с персональными ценами
-                </button>
+                <a href="#">
+                    <button>
+                        Получить прайс <br />
+                        с персональными ценами
+                    </button>
+                </a>
             </div>
         </div>
         <hr />
@@ -175,13 +177,6 @@
                                                 <li> Профнастил Н75</li>
                                                 <li>Профнастил НС35</li>
                                             </ul>
-                                            <ul>
-                                                <li>Профнастил С8</li>
-                                                <li> Профнастил Н57</li>
-                                                <li> Профнастил Н60 </li>
-                                                <li> Профнастил Н75</li>
-                                                <li>Профнастил НС35</li>
-                                            </ul>
                                         </div>
                                         <div class="info-button fourth">
                                             <a href="#">
@@ -211,17 +206,6 @@
                                                 <li> Лист полимер</li>
                                             </ul>
                                         </div>
-                                        <div>
-                                            <h2>Сортовой прокат</h2>
-                                            <ul>
-                                                <li>Арматура</li>
-                                                <li> Катанка</li>
-                                                <li> Круг </li>
-                                                <li> Проволока</li>
-                                                <li> Квадрат</li>
-                                                <li> Шестигранник</li>
-                                            </ul>
-                                        </div>
                                     </div>
                                     <div class="list_position">
                                         <div>
@@ -230,14 +214,6 @@
                                                 <li> Труба профильная </li>
                                                 <li> Труба Б/Ш</li>
                                                 <li> Труба Э/С </li>
-                                            </ul>
-                                        </div>
-                                        <div>
-                                            <h2>Фасонный прокат</h2>
-                                            <ul>
-                                                <li>Балка</li>
-                                                <li> Уголок</li>
-                                                <li> Швеллер </li>
                                             </ul>
                                         </div>
                                     </div>
@@ -274,7 +250,59 @@
                 <!--/ tabs -->
             </div>
         </div>
-        a
+        <div class="form_block">
+            <div class="form_content">
+                <h1>
+                    Получите полный каталог <br>
+                    и прайс на металлопрокат
+                </h1>
+                <div class="form_elements">
+                    <div class="form_elements_block part_1">
+                        <label for="email">
+                            <p>Куда отправить прайс и каталог?</p>
+                        </label>
+                        <div class="form">
+                            <input type="email" id="email" class="form_input" placeholder="E-mail" required name="email">
+                        </div>
+                    </div>
+                    <div class="form_elements_block part_2">
+                        <p>Какую компанию вы представляете?</p>
+                        <div class="form">
+                            <select class="form_select">
+                                <option>Торговая компания, магазин</option>
+                                <option>Belaruski </option>
+                                <option>Bravo</option>
+                                <option>Bazarstore</option>
+                                <option>Araz Supermarket</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <div class="form_elements elements_2">
+                    <div class="form_elements_block part_1">
+                        <label for="login">
+                            <p>Как к вам обращаться?</p>
+                        </label>
+                        <div class="form">
+                            <input type="uname" id="login" class="form_input" placeholder="Ваше имя" required name="login">
+                        </div>
+                    </div>
+                    <div class="form_elements_block part_2">
+                        <label for="tel">
+                            <p>Введите телефон</p>
+                        </label>
+                        <div class="form">
+                            <input type="tel" id="tel" class="form_input" placeholder="+ 7 ( _ _ _ ) - _ _ _ - _ _ - _ _" required name="tel" maxlength="17" pattern="\+7\s?[\(]{0,1}9[0-9]{2}[\)]{0,1}\s?\d{3}[-]{0,1}\d{2}[-]{0,1}\d{2}">
+                        </div>
+                    </div>
+                </div>
+                <p style="margin-top: 8px;">Перезвоним, чтобы обсудить условия поставки</p>
+                <button>Узнать стоимость</button>
+                <p style="line-height: 16px; margin-top: 8px; font-size: 15px;">Нажимая на кнопку, вы даете согласие на обработку<br> своих персональных данных и соглашаетесь с<br> Политикой конфиденциальности
+                </p>
+            </div>
+            <img src="images/block_background(man).png" alt="man :D" style="position: relative; bottom: 29.5px;">
+        </div>
     </main>
 </body>
 
